cdr: add route for users
