# xivo_call_logs/plugins/cdr/resource.py
@@ -4,10 +4,12 @@
 
 from flask import request
 from xivo.auth_verifier import required_acl
+from xivo_call_logs.core.auth import get_token_user_uuid_from_request
 from xivo_call_logs.core.rest_api import AuthResource
 
 from .schema import cdr_schema
 from .schema import list_schema
+from .schema import user_list_schema
 
 
 class CDRResource(AuthResource):
@@ -19,6 +21,23 @@ class CDRResource(AuthResource):
     def get(self):
         args = list_schema.load(request.args).data
         cdrs = self.cdr_service.list(**args)
+
+        return {'items': cdr_schema.dump(cdrs['items'], many=True).data,
+                'total': cdrs['total'],
+                'filtered': cdrs['filtered']}
+
+
+class CDRUserResource(AuthResource):
+
+    def __init__(self, auth_client, cdr_service):
+        self.auth_client = auth_client
+        self.cdr_service = cdr_service
+
+    @required_acl('call_logd.users.me.cdr.read')
+    def get(self):
+        args = user_list_schema.load(request.args).data
+        user_uuid = get_token_user_uuid_from_request(self.auth_client)
+        cdrs = self.cdr_service.list(user_uuid=user_uuid, **args)
 
         return {'items': cdr_schema.dump(cdrs['items'], many=True).data,
                 'total': cdrs['total'],
